// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for size: "lg", weight: semibold, align: start, color: info and ellipsis: true 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(p,span,div,address,blockquote,figcaption,cite,time,legend)) {
  all: unset !important;
}
.root {
  all: unset;
  display: block;
  font: var(--p-font-weight-semibold) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  font-size: var(--p-typescale-lg);
  color: var(--p-color-info);
  text-align: start;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for size: "md", weight: bold, align: end, color: contrast-high and ellipsis: true 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(p,span,div,address,blockquote,figcaption,cite,time,legend)) {
  all: unset !important;
}
.root {
  all: unset;
  display: block;
  font: var(--p-font-weight-bold) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  font-size: var(--p-typescale-md);
  color: var(--p-color-contrast-high);
  text-align: end;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for size: "sm", weight: normal, align: end, color: primary and ellipsis: false 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(p,span,div,address,blockquote,figcaption,cite,time,legend)) {
  all: unset !important;
}
.root {
  all: unset;
  display: block;
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  font-size: var(--p-typescale-sm);
  color: var(--p-color-primary);
  text-align: end;
}"
`;

exports[`getComponentCss() > should return correct css for size: "sm", weight: normal, align: inherit, color: primary and ellipsis: false 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(p,span,div,address,blockquote,figcaption,cite,time,legend)) {
  all: unset !important;
}
.root {
  all: unset;
  display: block;
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  font-size: var(--p-typescale-sm);
  color: var(--p-color-primary);
  text-align: inherit;
}"
`;

exports[`getComponentCss() > should return correct css for size: "sm", weight: normal, align: start, color: primary and ellipsis: false 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(p,span,div,address,blockquote,figcaption,cite,time,legend)) {
  all: unset !important;
}
.root {
  all: unset;
  display: block;
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  font-size: var(--p-typescale-sm);
  color: var(--p-color-primary);
  text-align: start;
}"
`;

exports[`getComponentCss() > should return correct css for size: "sm", weight: normal, align: start, color: primary and ellipsis: false 2`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(p,span,div,address,blockquote,figcaption,cite,time,legend)) {
  all: unset !important;
}
.root {
  all: unset;
  display: block;
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  font-size: var(--p-typescale-sm);
  color: var(--p-color-primary);
  text-align: start;
}"
`;

exports[`getComponentCss() > should return correct css for size: {"base":"sm","xs":"lg","s":"md","m":"inherit","l":"xs","xl":"xl"}, weight: bold, align: center, color: error and ellipsis: true 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(p,span,div,address,blockquote,figcaption,cite,time,legend)) {
  all: unset !important;
}
.root {
  all: unset;
  display: block;
  font: var(--p-font-weight-bold) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  font-size: var(--p-typescale-sm);
  color: var(--p-color-error);
  text-align: center;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
@media(min-width:480px) {
  .root {
    font-size: var(--p-typescale-lg);
  }
}

@media(min-width:760px) {
  .root {
    font-size: var(--p-typescale-md);
  }
}

@media(min-width:1000px) {
  .root {
    font-size: inherit;
  }
}

@media(min-width:1300px) {
  .root {
    font-size: var(--p-typescale-xs);
  }
}

@media(min-width:1760px) {
  .root {
    font-size: var(--p-typescale-xl);
  }
}
"
`;
